NEWS
====
**Peptides v.1.0.4**
* A instaindex function bug has been fixed.
* A problem with line breaks in sequences was solved.

**Peptides v.1.0.3**
* A membpos function bug has been fixed.
* The results now are not rounded.

**Peptides v.1.0.2**

* Hydrophobicity function now can compute the GRAVY index with one of the 38 scales includes in Peptides (*new):

  1. **Aboderin:** Aboderin, A. A. (1971). An empirical hydrophobicity scale for α-amino-acids and some of its applications. International Journal of Biochemistry, 2(11), 537-544.
  2. **AbrahamLeo:** Abraham D.J., Leo A.J. Hydrophobicity (delta G1/2 cal). Proteins: Structure, Function and Genetics 2:130-152(1987).
  3. ***Argos:** Argos, P., Rao, J. K., & Hargrave, P. A. (1982). Structural Prediction of Membrane‐Bound Proteins. European Journal of Biochemistry, 128(2‐3), 565-575.
  4. **BlackMould:** Black S.D., Mould D.R. Hydrophobicity of physiological L-alpha amino acids. Anal. Biochem. 193:72-82(1991).
  5. **BullBreese:** Bull H.B., Breese K. Hydrophobicity (free energy of transfer to surface in kcal/mole). Arch. Biochem. Biophys. 161:665-670(1974).
  6. ***Casari:** Casari, G., & Sippl, M. J. (1992). Structure-derived hydrophobic potential: hydrophobic potential derived from X-ray structures of globular proteins is able to identify native folds. Journal of molecular biology, 224(3), 725-732.
  7. **Chothia:** Chothia, C. (1976). The nature of the accessible and buried surfaces in proteins. Journal of molecular biology, 105(1), 1-12.
  8. ***Cid:** Cid, H., Bunster, M., Canales, M., & Gazitúa, F. (1992). Hydrophobicity and structural classes in proteins. Protein engineering, 5(5), 373-375.
  9. **Cowan3.4:** Cowan R., Whittaker R.G. Hydrophobicity indices at pH 3.4 determined by HPLC. Peptide Research 3:75-80(1990).
  10. **Cowan7.5:** Cowan R., Whittaker R.G. Hydrophobicity indices at pH 7.5 determined by HPLC. Peptide Research 3:75-80(1990).