@@ -1,6 +1,6 @@
 Package: Peptides
-Version: 1.0.4
-Date: 2015-04-30
+Version: 1.1.0
+Date: 2015-06-03
 Title: Calculate Indices and Theoretical Properties of Protein
         Sequences
 Author: Daniel Osorio, Paola Rondon-Villarreal and Rodrigo Torres.
@@ -9,7 +9,7 @@ URL: https://github.com/dosorio/Peptides/
 Suggests: RUnit
 Description: Calculate physicochemical properties and indices from amino-acid sequences of peptides and proteins. Include also the option to read and plot output files from the 'GROMACS' molecular dynamics package.
 License: GPL-2
-Packaged: 2015-04-30 11:50:13 UTC; Daniel
 NeedsCompilation: no
+Packaged: 2015-06-03 01:35:16 UTC; Daniel
 Repository: CRAN
-Date/Publication: 2015-04-30 20:34:38
+Date/Publication: 2015-06-03 08:14:36
