@@ -1,21 +1,23 @@
-30677e885431b363bbf91cb83f92ba4c *DESCRIPTION
-16b48259136cdcf2f17862e73a2cd56a *NAMESPACE
-8c1f6400e06e0bf57ecd8d83a1070eb0 *NEWS
-9856856011f101b6ba4e536b4b1d910b *R/AAcomp.R
-94d4a1c0d3186e21d46903e5ef301a93 *R/Boman.R
-216e196a3ccdc27b50eb106217f68bd2 *R/MW.R
-896f9bb5517ba039baf1076c928eb489 *R/aindex.R
-01d85e2e3b4042792d420ddc3a0e2a13 *R/charge.R
-f496408a4ad9e396696e8a77612c9747 *R/hmoment.R
-665cae8f4adb6c8df36ac7fd3bd20374 *R/hydrophobicity.R
-78994762eec0c29f58c3a1a8477e75c3 *R/instaindex.R
-8114374a520fc7d1401176848cd35c7a *R/lengthpep.R
-6b9767056911963a68a4c2f1f0c0882e *R/membpos.R
-0af7b876832d499acc63933a16089cb5 *R/pI.R
-d542b6713bb074d7e9af4f05adc2a15b *R/plot.xvg.R
-92224fb486563bd98be094e64d7de3f1 *R/read.xvg.R
+34484886eac34e0c7b3e0a7a3581b29a *DESCRIPTION
+f764416b28695b618b4096640b7e0316 *NAMESPACE
+9dc8728d05ecb114f0fb262a3b20a028 *NEWS
+2030a9613771642322c70d3ca38429fa *R/aacomp.R
+2f89dba1a06741f07119e33c5086cb2a *R/aindex.R
+f5fd23f4bcab406f5652b7fa1261b8c0 *R/boman.R
+5a37e5aeb3c13bb7b63e97f514290c12 *R/charge.R
+e15de55ed1dc044a0a401f948d379454 *R/hmoment.R
+eb28958f2b666826a7982ea5a0bbe939 *R/hydrophobicity.R
+71cee2c28b19b40d78c726399e501c69 *R/instaindex.R
+a74e01bbf78b6d50ea27bd63060d586b *R/kidera.R
+482bb94cf605ae6e0f68d27d599d2909 *R/lengthpep.R
+d8b4e1d573537fe01718d52a37fd7873 *R/membpos.R
+3a96bf04446cfd1b86468a7775b9afd5 *R/mw.R
+53412623a46430d42d86808457fa9087 *R/pI.R
+83f515c9998ee587bb00ff5b7b20e893 *R/plot.xvg.R
+735747274824a1c96a39e8ec57b6c593 *R/read.xvg.R
 872fdf7b1e7790d43d81b92a659b3f55 *data/H.RData
-53f5f60143f60dfc3aae68bbba3780f1 *data/datalist
+0d101d5b4af92998ac408c3d7709a386 *data/Kfactors.RData
+645f5fa1cdd4ec05dd7fab329090b1f5 *data/datalist
 91fccec7d18101437c13c194ab46b7f6 *data/pKscales.RData
 ebe05569058ca8f73e875df8325e072d *data/pepdata.RData
 a620ddd9496a48530d6dc9b64ffe9cdc *inst/tests/runalltest.R
@@ -33,21 +35,23 @@ bdbc8ed908ba1428a57ddf6073b5c5ea *inst/tests/runit.mw.R
 9cc5457350e649f19aca60689b379f31 *inst/xvg-files/POPE.xvg
 099bbd512044524791c66106256617c2 *inst/xvg-files/POPG.xvg
 ae5ed083b17c6c5f9ad089017ffe8e24 *inst/xvg-files/epot.xvg
-c6a2b6ff9f0a7583e69fc3df652bda0f *man/AAcomp.Rd
-acf9d11ece3ffadab3755a37b35ec7b5 *man/Boman.Rd
-df361e348167f2adc9c90972e6a75e54 *man/MW.Rd
-ca2f796983de79f04b68d44e6d2bbc3c *man/Pepdata.Rd
-80d70ef916325f588d40952cf59a2de3 *man/Peptides-package.Rd
+864478c9feff9a616396a52783aef295 *man/Kfactors.Rd
+598594d9d4c04a113591af2508c80e59 *man/Peptides-package.Rd
+c6a2b6ff9f0a7583e69fc3df652bda0f *man/aacomp.Rd
 abf85db4e18a2f3050f6a55829bfe202 *man/aindex.Rd
+acf9d11ece3ffadab3755a37b35ec7b5 *man/boman.Rd
 e5622159b956d2db77cfd3a746158f18 *man/charge.Rd
 74343df2157bd3ccbe2ba5a8f2da094d *man/h.Rd
 c7b9477fa471a8b07691765df1f002d0 *man/hmoment.Rd
 d8e1500a30e5c8b9fc0e62477458ccd4 *man/hydrophobicity.Rd
 ff9935c9ed490fcd948c372e99895ec6 *man/instaindex.Rd
+69a64a8f4baf75a658525dcfa8e3a48c *man/kidera.Rd
 de9b2d33b95d03680b24fe60a3466155 *man/lengthpep.Rd
 a410535cd65c8eee506c6a6e8a469654 *man/membpos.Rd
+df361e348167f2adc9c90972e6a75e54 *man/mw.Rd
 1362bb17c29cef7ab5f61f67f27c3c6d *man/pI.Rd
 513d0db824a9607d670c45e320b782e4 *man/pKscales.Rd
+ca2f796983de79f04b68d44e6d2bbc3c *man/pepdata.Rd
 2029a9fd7a6ccabb1506217d48edbba8 *man/plot.xvg.Rd
 01b16854c7ad858cd0ef4cffd3a1a4b7 *man/read.xvg.Rd
 cd53b51359bffd8b559870088d7a6a11 *tests/doRUnit.R
