@@ -1,8 +1,8 @@
-# PI
+# pI
 # This function computes the theoretical pI of a protein sequence using one of the 9 pKa scales availables
 # Bjellqvist, EMBOSS, Murray, Sillero, Solomon, Stryer, Lehninger, Dawson or Rodwell
 
-pI<-function (seq,pKscale="EMBOSS") 
+pI<-function (seq,pKscale="EMBOSS")
 {
   seq<-gsub("[\r\n]","",seq)
   # Define pH values
@@ -12,4 +12,3 @@ pI<-function (seq,pKscale="EMBOSS")
   # Computes the pI and returns the value rounded to 3 decimals
   return(pHs[which.min(abs(charges))])
 }
-
