@@ -1,0 +1,20 @@
+\name{Kfactors}
+\alias{Kfactors}
+\docType{data}
+\title{The Ten Kidera Factors
+%%   ~~ data name/kind ... ~~
+}
+\description{
+The Kidera Factors were originally derived by applying multivariate analysis to 188 physical properties of the 20 amino acids and using dimension reduction techniques. A 10-dimensional vector of orthogonal factors was then obtained for each amino acid.
+}
+\usage{data("Kfactors")}
+\format{
+A list with the ten Kidera factors of the 20 amino acids.
+}
+\references{
+Kidera, A., Konishi, Y., Oka, M., Ooi, T., & Scheraga, H. A. (1985). Statistical analysis of the physical properties of the 20 naturally occurring amino acids. Journal of Protein Chemistry, 4(1), 23-55.
+}
+\examples{
+data("Kfactors")
+}
+\keyword{datasets}
