@@ -5,15 +5,14 @@
 Calculate Indices and Theoretical Properties of Protein Sequences
 }
 \description{
-Calculate physicochemical properties and indices from amino-acid sequences of peptides
-and proteins. Include also the option to read and plot output files from the 'GROMACS' molecular dynamics package.
+Calculate physicochemical properties and indices from amino-acid sequences of peptides and proteins. Include also the option to read and plot output files from the 'GROMACS' molecular dynamics package.
 }
 \details{
 \tabular{ll}{
 Package: \tab Peptides\cr
 Type: \tab Package\cr
-Version: \tab 1.0.4\cr
-Date: \tab 2015-04-30\cr
+Version: \tab 1.1.0\cr
+Date: \tab 2015-06-03\cr
 License: \tab GPL-2\cr
 }
 }
